--- a/public/index.html
+++ b/public/index.html
@@ -67,13 +67,25 @@
       padding: 8px;
       border-radius: 4px;
     }
+
+    #transfer-ui-wrapper {
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #121212;
+  position: fixed; /* or absolute */
+  top: 0;
+  left: 0;
+  z-index: 9999; /* if needed */
+}
   </style>
 </head>
 
 <body>
 
-  <!-- 🔌 Connect UI -->
-  <div id="connect-ui" class="connect-container">
+<!-- 🔌 Connect UI -->
+<div id="connect-ui" class="connect-container">
   <div class="connect-box">
     <h2 class="connect-heading">Your ID: <span id="myId" class="user-id"></span></h2>
     <div class="input-group">
@@ -85,17 +97,12 @@
   </div>
 </div>
 
-
-  <!-- 📂 Transfer UI -->
-<!-- Outer Wrapper -->
-<div id="transfer-ui" style="display: none; height: 100vh; background-color: #121212; display: flex; justify-content: center; align-items: center;">
-
-  <!-- Centered Inner Container -->
-  <div style="display: flex; width: 90%; max-width: 1000px; height: 90vh; background-color: #121212; color: white; font-family: sans-serif; border-radius: 8px; overflow: hidden; box-shadow: 0 0 20px rgba(0,0,0,0.5);">
+<!-- 📂 Transfer UI - Wrapped properly -->
+<div id="transfer-wrapper" style="display: none; height: 100vh; width: 100vw; background-color: #121212; justify-content: center; align-items: center;">
+  <div id="transfer-ui" style="display: flex; width: 90%; max-width: 1000px; height: 90vh; background-color: #121212; color: white; font-family: sans-serif; border-radius: 8px; overflow: hidden; box-shadow: 0 0 20px rgba(0,0,0,0.5);">
 
     <!-- Left Panel -->
     <div style="flex: 1; padding: 30px; display: flex; flex-direction: column; gap: 20px; background-color: #121212;">
-
       <div>
         <label>My ID</label>
         <input id="myTransferId" readonly style="width: 100%; padding: 10px; border: none; border-radius: 4px; background-color: #2c2c2c; color: white;" />
@@ -110,7 +117,7 @@
       <div>
         <label>Upload</label>
         <input type="file" id="fileInput" style="color: white;" />
-        <button id="uploadFileBtn" style="margin-top: 10px; padding: 10px 16px; background-color: #2c2c2c; color: white; border: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s ease;">
+        <button id="uploadFileBtn" style="margin-top: 10px; padding: 10px 16px; background-color: #2c2c2c; color: white; border: none; border-radius: 4px; cursor: pointer;">
           📤 Upload
         </button>
         <div id="upload-list" style="margin-top: 10px;"></div>
@@ -121,7 +128,6 @@
         <label>Download</label>
         <div id="download-list" style="margin-top: 10px;"></div>
       </div>
-
     </div>
 
     <!-- Right Panel (Chat) -->
@@ -136,6 +142,7 @@
 
   </div>
 </div>
+
 
 
 
