--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
       color: white;
       border-radius: 4px;
       cursor: pointer;
-    ">📋</button>
+    ">🔗</button>
     <span id="copy-popup" style="
       display: none;
       position: absolute;
